--- a/.github/workflows/Q3.yml
+++ b/.github/workflows/Q3.yml
@@ -31,7 +31,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: teste creation nouveau fichier
         run: | 
-          cat "CHAMPVILLARD SÉBASTIEN" > Q3_archive_java.txt
+          cat Q3_archive_java.txt
+          echo "CHAMPVILLARD SÉBASTIEN" > Q3_archive_java.txt
           cat Q3.java >> Q3_archive_java.txt
         
         # push
