--- a/.github/workflows/Q4.yml
+++ b/.github/workflows/Q4.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           git config --global user.name sebeaty
           git config --global user.email sebachamp007@outlook.fr
-          git add Q4_archive_${dateFichier}.txt
-          git commit -m "test push de Q4_archive_${dateFichier}.txt"
+          git add .
+          git commit -m "test push "
           git push
