--- a/.github/workflows/Q4.yml
+++ b/.github/workflows/Q4.yml
@@ -31,9 +31,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: nom date JJ-MM-AAAA
         run: | 
-          dateFichier= date +%d-%m-%Y 
-          echo "CHAMPVILLARD SÉBASTIEN" > Q4_archive_${dateFichier}.txt
-          cat Q4.java >> Q4_archive_${dateFichier}.txt
+          echo "DATEFICHIER=$(date +'%d-%m-%Y')" >> $GITHUB_ENV
+          echo "CHAMPVILLARD SÉBASTIEN" > Q4_archive_${DATEFICHIER}.txt
+          cat Q4.java >> Q4_archive_${DATEFICHIER}.txt
         
         # push
       - name: commmit et push
