--- a/.github/workflows/Q4.yml
+++ b/.github/workflows/Q4.yml
@@ -32,8 +32,9 @@ jobs:
       - name: nom date JJ-MM-AAAA
         run: | 
           echo "DATEFICHIER=$(date +'%d-%m-%Y')" >> $GITHUB_ENV
-          echo "CHAMPVILLARD SÉBASTIEN" > Q4_archive_${DATEFICHIER}.txt
-          cat Q4.java >> Q4_archive_${DATEFICHIER}.txt
+          echo "NOMFICHIER="Q4_archive_${DATEFICHIER}.txt" >>$GITHUB_ENV
+          echo "CHAMPVILLARD SÉBASTIEN" > $NOMFICHIER
+          cat Q4.java >> $NOMFICHIER
         
         # push
       - name: commmit et push
