--- a/.github/workflows/Q6.yml
+++ b/.github/workflows/Q6.yml
@@ -19,12 +19,12 @@ jobs:
 
     - name: Creer Q6_archive_date
       run: |
-        FILE_NAME="Q6_archive_${DATE}.txt"
-        echo "CHAMPVILLARD Sébastien" > $FILE_NAME
-        cat Q6.java >> $FILE_NAME
-        echo "Taille du fichier Q6.java (en caractères et en lignes):" >> $FILE_NAME
-        wc -c < Q6.java >> $FILE_NAME
-        wc -l < Q6.java >> $FILE_NAME
+        FILE_NAME_6="Q6_archive_${DATE}.txt"
+        echo "CHAMPVILLARD Sébastien" > $FILE_NAME_6
+        cat Q6.java >> $FILE_NAME_6
+        echo "Taille du fichier Q6.java (en caractères et en lignes):" >> $FILE_NAME_6
+        wc -c < Q6.java >> $FILE_NAME_6
+        wc -l < Q6.java >> $FILE_NAME_6
 
     - name: Comparer avec l'ancien Q6_archive_date
       run: |
@@ -44,6 +44,7 @@ jobs:
 
     - name: Commit and push Q5 archive file
       run: |
+        git pull --rebase origin main
         git add Q6_archive_${DATE}.txt Q6_différences.txt
         git commit -m "Add Q6_archive_${DATE}.txt and Q6_différences.txt"
         git push
